Fixing bug 420223 - Add |setDelegate:nil| call to the |nsMenuX.mm| destructor (crash protection). r=josh,sr=roc,approval1.9b4=beltzner